# suricata-rule-parser

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: generate_rule.py  parse_file.py  validate_rules.py
rules/: example.rules
suricata_rule_parser/: __init__.py  __version__.py  cli.py  constants.py  exceptions.py  models.py  parser.py  serializer.py  validator.py
tests/: __init__.py  conftest.py  test_cli.py  test_exceptions.py  test_integration.py  test_models.py  test_parser.py  test_serializer.py  test_validator.py
